# rust-axum-postgres-todo-example

./: .env.example  Cargo.toml  README.md
migrations/: 2024052501_create_users_table.sql  2024052502_create_todos_table.sql
src/: lib.rs  main.rs
src/api/: auth_router.rs  mod.rs  router.rs  todos_router.rs  users_router.rs
src/application/: mod.rs
src/application/auth/: mod.rs
src/application/auth/commands/: authorize.rs  register.rs
src/application/auth/models/: mod.rs  register_model.rs
src/application/todos/commands/: complete_todo.rs  create_todo.rs  delete_todo.rs  mod.rs  update_todo.rs
src/application/todos/models/: create_todo_model.rs  mod.rs  todo_details_model.rs  todo_list_model.rs  update_todo_model.rs
src/application/todos/queries/: get_todo.rs  get_todos.rs  mod.rs
src/application/users/: mod.rs
src/application/users/commands/: authorize.rs  mod.rs  register.rs
src/application/users/models/: login_model.rs  mod.rs  user_model.rs
src/application/users/queries/: get_user.rs  get_users.rs  mod.rs
src/auth/: jwt.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: postgres.rs
src/infrastructure/entities/: Todo.rs  User.rs
src/server/: state.rs
src/utils/: errors.rs  mod.rs  pagination.rs  validation.rs
