[package]
name = "rust-axum-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "macros"] }
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
once_cell = "1.19.0"
anyhow = "1.0.86"
tracing = "0.1.40"
async-trait = "0.1.80"
uuid = { version = "1.8.0", features = ["v4"] }
utoipa = {version = "5.0.0-alpha.0", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "7.1.1-alpha.0", features = ["axum", "vendored"]}
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
tracing-subscriber = "0.3.18"
validator = "0.18.1"
validator_derive = "0.18.1"

